# datastrucs

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  result.h  test.c  vect.c  vect.h
include/ds/: vect.h
src/: vect.c
src/ds/: bin_tree.c  bin_tree.h  bst.c  bst.h  defs.h  heap.c  heap.h  list.c  list.h  result.h  treemap.c  treemap.h  vect.c  vect.h
tests/: common_stuff.h  test.c  test_bin_tree.h  test_heap.h  test_list.h  test_vector.h  vb_test.h
